js/js.translator/testData/incremental/invalidation/updateExportsAndInlineImportsWithCrossModuleInliner/lib2/l2b.5.kt
inline fun funA() = listOf(fun1()).joinToString()
inline fun funB() = listOf(fun1()).joinToString()
